refactor: 정적 파일 경로 변경 및 Nginx 설정 개선
정적 파일들을 `/public` 폴더에서 `/static` 폴더로 이동하고,  Nginx 설정을 업데이트하여  다국어 지원 및 캐싱 제어를 개선했습니다.

- `/public` 폴더에 있던 모든 정적 파일들을 `/static` 폴더로 이동
- Nginx 설정에서 `root` 경로를 `/usr/share/nginx/html/static`으로 변경
- `config.js` 파일에 대한 캐싱을 비활성화
- `ads.txt`, `robots.txt`, `sitemap.txt`, `favicon.ico`에 대한 직접적인 경로 설정 추가
- 다국어 서브 폴더 (en, ja, ko)에 대한 처리 추가
- 에러 페이지용 정적 파일 `/err.html`에 대한 경로 설정 추가

이 변경으로 정적 파일 관리가 더욱 효율적으로 이루어지고, 다국어 지원 및  `config.js`  파일의 동적 구성을 위한  캐싱 제어가 가능해졌습니다.

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     listen [::]:80;
     server_name localhost;
-    root /usr/share/nginx/html;
+    root /usr/share/nginx/html/static;
     index index.html;
 
     # Custom error pages
@@ -49,4 +49,23 @@ server {
         return 200 "healthy\n";
         add_header Content-Type text/plain;
     }
+
+    # Serve config.js with no cache (for dynamic config if needed)
+    location /config/config.js {
+        add_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
+    }
+
+    # Serve ads.txt, robots.txt, sitemap.txt, favicon.ico from root
+    location = /ads.txt {}
+    location = /robots.txt {}
+    location = /sitemap.txt {}
+    location = /favicon.ico {}
+
+    # Language subfolders (en, ja, ko)
+    location ~ ^/(en|ja|ko)/ {
+        try_files $uri $uri/ $uri.html =404;
+    }
+
+    # Error page static
+    location = /err.html {}
 }
