--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ server {
     listen 80;
     listen [::]:80;
     server_name localhost;
-    root /usr/share/nginx/html/static;
+    root /usr/share/nginx/html;
     index index.html;
 
     # Custom error pages
